added secrure env variables via travis encrypt

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 language: ruby
 rvm:
-  - 2.0.0
+- 2.0.0
 env:
-  - TWITTER_CONSUMER_KEY= ENV["TWITTER_CONSUMER_KEY"]
-  - TWITTER_CONSUMER_SECRET= ENV["TWITTER_CONSUMER_SECRET"]
+  global:
+    secure: ereauGEcswkTAMSZqXiHx1nuqz/LOBO8uLNBml/UUxoYa8siN4ZlNUZkHk631sbEbqIPjNVb6jcOBVLkiDeEDl3HFkmZrOpL4gNnvsoFYYL4ZnXgfytIa7/y4MOcwXQ/HO7L3Z1WWspC3lxWgJjtIKiAzOVz2gsCMRRJ2WhAZ4A=
